<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentList">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studentList"
            android:layout_width="409dp"
            android:layout_height="600dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp" />

        <TextView
            android:id="@+id/studentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            android:text="@string/student_number" />

        <TextView
            android:id="@+id/studentNotCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/not_attendance" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/main"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/border_bg"
            android:src="@drawable/logo"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:text="@string/student_list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp">

        </TextView>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/opacity"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>