<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLogin"
    android:background="@color/white"
    android:scaleType="centerCrop">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/textView10"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="-500dp"
            android:layout_marginEnd="55dp"
            android:fontFamily="sans-serif-black"
            android:orientation="vertical"
            android:src="@drawable/logo"
            android:textAlignment="center"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="260dp"
            android:text="@string/email_message"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="444dp"
            android:text=" Đăng ký"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <!--email-->
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="18"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="290dp"
            android:background="#ffffff"
            android:text="   Email   "
            android:textColor="@color/main"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txtValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="350dp"/>

        <!---->
        <!--password-->
        <LinearLayout

            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="380dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@null"
                />
        </LinearLayout
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="370dp"
            android:background="#ffffff"
            android:text="@string/password"
            android:textColor="@color/main"
            android:textSize="17sp" />
        <!---->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="125dp"
            android:layout_marginTop="480dp"
            android:layout_marginEnd="125dp"
            android:backgroundTint="@color/main"

            android:text="@string/login"
            android:textColor="@color/white">

        </Button>




        <!--    <EditText-->
        <!--        android:id="@+id/editTextEmail"-->
        <!--        android:layout_width="307dp"-->
        <!--        android:layout_height="45dp"-->
        <!--        android:hint="Nhập email"-->
        <!--        tools:layout_editor_absoluteX="52dp"-->
        <!--        tools:layout_editor_absoluteY="170dp" />-->

        <!--    <EditText-->
        <!--        android:id="@+id/editTextPassword"-->
        <!--        android:layout_width="307dp"-->
        <!--        android:layout_height="45dp"-->
        <!--        android:hint="Nhập mật khẩu"-->
        <!--        android:inputType="textPassword"-->
        <!--        tools:layout_editor_absoluteX="52dp"-->
        <!--        tools:layout_editor_absoluteY="301dp" />-->
        <!--    <EditText-->
        <!--        android:id="@+id/editTextPassword"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="0dp"-->
        <!--        android:hint="pass"-->
        <!--        android:layout_marginBottom="119dp"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/registerNow"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />-->

        <!--    <EditText-->
        <!--        android:id="@+id/editTextEmail"-->
        <!--        android:hint="Nhập email"-->
        <!--        android:layout_width="0dp"-->
        <!--        android:layout_height="0dp"-->
        <!--        android:layout_marginBottom="103dp"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent" />-->


        <!--        <TextView-->
        <!--            android:id="@+id/registerNow"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="13dp"-->
        <!--            android:layout_marginBottom="100dp"-->
        <!--            android:gravity="center"-->
        <!--            android:text="Ấn để đăng ký"-->
        <!--            android:textStyle="bold" />-->

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>